--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "gapi-script": "^1.2.0",
     "heroicons": "^2.1.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3"
   },
