--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.1.1",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
+    "flowbite-react": "^0.8.0",
     "gapi-script": "^1.2.0",
     "heroicons": "^2.1.1",
     "lodash": "^4.17.21",
@@ -21,7 +28,8 @@
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
